# SC_Microservice5

./: Dockerfile  Microservice.txt
.github/workflows/: buildandpush.yml  superlinter.yml
backend/: Cargo.toml
backend/migrations/2022-05-22-161833_create_posts/: down.sql  up.sql
backend/private/: build_id
backend/src/: actions.rs  api.rs  connect.rs  main.rs  models.rs  schema.rs  show_posts.rs
frontend/: Cargo.toml
frontend/src/: app.rs  courselist_page.rs  header.rs  lib.rs  petlist_page.rs  router.rs
